internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-rewrite-url-prefix.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /origin:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      headers:
                      - name: :authority
                        stringMatch:
                          exact: gateway.envoyproxy.io
                      pathSeparatedPrefix: /origin
                    name: rewrite-route
                    route:
                      cluster: rewrite-route-dest
                      prefixRewrite: /rewrite
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      headers:
                      - name: :authority
                        stringMatch:
                          exact: gateway.envoyproxy.io
                      pathSeparatedPrefix: /origin
                    name: rewrite-route-timeout
                    route:
                      cluster: rewrite-route-dest
                      idleTimeout: 3600s
                      prefixRewrite: /rewrite
                      timeout: 5s
                      upgradeConfigs:
                      - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /origin/:
                  action:
                    name: route_list
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                      routes:
                      - match:
                          headers:
                          - name: :authority
                            stringMatch:
                              exact: gateway.envoyproxy.io
                          pathSeparatedPrefix: /origin
                        name: rewrite-route
                        route:
                          cluster: rewrite-route-dest
                          prefixRewrite: /rewrite
                          upgradeConfigs:
                          - upgradeType: websocket
                      - match:
                          headers:
                          - name: :authority
                            stringMatch:
                              exact: gateway.envoyproxy.io
                          pathSeparatedPrefix: /origin
                        name: rewrite-route-timeout
                        route:
                          cluster: rewrite-route-dest
                          idleTimeout: 3600s
                          prefixRewrite: /rewrite
                          timeout: 5s
                          upgradeConfigs:
                          - upgradeType: websocket
    name: first-listener/gateway_envoyproxy_io
